option java_package = "org.apache.hadoop.yarn.proto";
option java_outer_classname = "YarnServerResourceManagerServiceProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;


message RefreshQueuesRequestProto {
}
message RefreshQueuesResponseProto {
}

message RefreshNodesRequestProto {
}
message RefreshNodesResponseProto {
}

message RefreshSuperUserGroupsConfigurationRequestProto {
}
message RefreshSuperUserGroupsConfigurationResponseProto {
}

message RefreshUserToGroupsMappingsRequestProto {
}
message RefreshUserToGroupsMappingsResponseProto {
}

message RefreshAdminAclsRequestProto {
}
message RefreshAdminAclsResponseProto {
}
